--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           if [ -f .flake8 ] || [ -f setup.cfg ] || [ -f tox.ini ] || [ -f .pep8 ]; then
             flake8 .
+            echo "Successfuly linted python code"
           else
             echo "No lint configuration found, skipping linting."
           fi
@@ -39,7 +40,7 @@ jobs:
       # Step 4: Run Python tests
       - name: Run Python tests
         run: |
-          if [ -f pytest.ini ] || ls tests; then
+          if [ -f pytest.ini ] || ls tests [-f test_app.py]; then
             pytest
           else
             echo "No tests found, skipping tests."
